ami/tests/braces.ami.test
AMI Syntax error with line 8 or just above: Section closed was never opened

