ami/tests/braces.ami
av 1

repeat 2 as $index {
    action f {
	exec Void
    }
}
}

 action g {
     exec Void
 }
